Fix S/L wrapping

--- a/webui/src/app/search/search.component.scss
+++ b/webui/src/app/search/search.component.scss
@@ -244,3 +244,7 @@ app-paginator {
     max-width: 250px;
   }
 }
+
+.cdk-column-peers {
+  white-space: nowrap;
+}
